# hyperliquid-backtesting

./: .gitignore  Cargo.toml  README.md  run_backtest.sh
benches/: README.md  indicators.rs  yata_comparison.rs
docs/: API.md  ARCHITECTURE.md  BACKTESTING.md  CLI.md  DATA_INGESTION.md  DOCUMENTATION_INDEX.md  INDICATORS.md  PARQUET.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START.md  README.md  S3_SETUP.md  SECURITY.md  STRATEGIES.md  TEST_COVERAGE.md
examples/: README.md  generate_l2_test_data.py  generate_test_data.py  sample_strategy.json  sma_crossover_strategy.json  test_script.sh
examples/strategies/: README.md  bollinger_bands.json  macd_crossover.json  rsi_mean_reversion.json  rsi_strategy.json  simple_price_momentum.json  sma_crossover.json
scripts/: README.md  download_and_test_7days.sh  test_7days.sh  test_perps_commands.sh  test_s3_size.sh  test_strategies_e2e.sh
src/: cli.rs  fees.rs  lib.rs  main.rs  metrics.rs  portfolio.rs  report.rs  util.rs
src/data/: cache.rs  loader.rs  mod.rs  parquet.rs  types.rs
src/indicators2/: impls.rs  mod.rs  registry.rs  tests.rs  utils.rs
src/ingest/: l2_parser.rs  mod.rs  s3.rs
src/ir/: compile.rs  mod.rs  types.rs
src/orderbook/: book.rs  mod.rs
tests/: backtest_engine_test.rs  entry_exit_test.rs  funding_api_test.rs  funding_schedule_test.rs  indicators_test.rs  integration_test.rs  order_validation_test.rs  parquet_test.rs  perps_engine_helpers_test.rs  perps_execution_test.rs  perps_integration_test.rs  perps_test.rs  strategy_evaluation_test.rs  strategy_test.rs
(+13 files in other folders)
