[package]
name = "hl-backtest"
version = "0.1.0"
edition = "2021"
authors = ["Hyperliquid Backtesting"]
description = "High-performance Rust backtester for Hyperliquid strategies"
license = "MIT"

[lib]
name = "hl_backtest"
path = "src/lib.rs"

[[bin]]
name = "hl-backtest"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
csv = "1.3"
# Using version 0.6.0 from crates.io (stable Rust compatible)
hyperliquid_rust_sdk = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
lz4_flex = "0.11"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.8"
parquet = "54.0"
arrow = "54.0"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indicators"
harness = false

[[bench]]
name = "yata_comparison"
harness = false

